7902535: Code coverage does not work in JDK 8